--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "local-storage": "^2.0.0",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
